--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <nav class="navbar navbar-expand-lg" style="background-color: #c2f8f4;">
       <div class="container-fluid">
         <a class="navbar-brand" style="font-size: 2rem;" href="#">Stellenwerttafel</a>
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,8 +56,8 @@
                   Stellenwerttafel 1
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="index.html">Leicht</a></li>
-                  <li><a class="dropdown-item" href="swt1schwer.html">Schwierig</a></li>
+                  <li><a class="dropdown-item" href="swt1leicht.html">Variante A</a></li>
+                  <li><a class="dropdown-item" href="swt1schwer.html">Variante B</a></li>
                 </ul>
               </li>
             </li>
@@ -68,29 +67,30 @@
                   Stellenwerttafel 2
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="swt2leicht.html">Leicht</a></li>
-                  <li><a class="dropdown-item" href="swt2schwer.html">Schwierig</a></li>
+                  <li><a class="dropdown-item" href="swt2leicht.html">Variante A</a></li>
+                  <li><a class="dropdown-item" href="swt2schwer.html">Variante B</a></li>
                 </ul>
               </li>
             </li>
           </ul>
         </div>
         <span class="navbar-text">
-          <p class="text-dark">Stellenwerttafel 1 (leicht)</p>
+          <p class="text-dark">Stellenwerttafel 1 (Variante A)</p>
         </span>
       </div>
-      
     </nav>
-    <div class="container text-center">
       <h2 id="exercise"></h2>
-      <div class="hunderterFeld">
+      <div class="dienesFeld">
+        <div class="hunderterFeld" >
+        </div>
+        <div class="zehnerFeld">
+        </div>
+        <div class="zehnerFeld2">
+        </div>
+        <div class="einerFeld">
+        </div>
       </div>
-      <div class="zehnerFeld">
-      </div>
-      <div class="einerFeld">
-      </div>
-    </div>
-    <div class="container text-center">
+    <div class="container" id="feld">
       <div class="row" id="count-row">
         <div class="container-fluid">
           <table class="table table-bordered" style="margin-top: 0%;">
@@ -102,7 +102,7 @@
               </tr>
             </thead>
             <tr>
-              <td id="hunderter"><input type="text" name="result" id="inputHunderter" autocomplete="off"></td>
+              <td id="hunderter"><input type="text" name="result" id="inputHunderter" value="" autocomplete="off"></td>
               <td id="zehner"><input type="text" name="result" id="inputZehner" autocomplete="off"></td>
               <td id="einer"><input type="text" name="result" id="inputEiner" autocomplete="off"></td>
             </tr>
@@ -112,15 +112,8 @@
     </div>
   </div>
   <div class="container text-center">
-    <button
-      id="submitBtn"
-      type="button"
-      class="btn btn-success btn-lg left-icon-holder"
-      onclick="submitBtnClicked()"
-    >
-    <i class="bi bi-check-all"></i>
-      Abgeben!
-    </button>
+    <button id="submitBtn" type="button" class="btn btn-success btn-lg left-icon-holder" onclick="submitBtnClicked()">
+    <i class="bi bi-check-all"></i>Abgeben!</button>
     <button class="btn btn-primary btn-lg left-icon-holder" onclick="refreshBtnClicked()"><i class="bi bi-arrow-clockwise"></i>Neue Aufgabe</button>
   </div>
 <div id="myModal" class="modal">
