--- a/swt2schwer.html
+++ b/swt2schwer.html
@@ -54,8 +54,8 @@
                   Stellenwerttafel 1
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="index.html">Leicht</a></li>
-                  <li><a class="dropdown-item" href="swt1schwer.html">Schwierig</a></li>
+                  <li><a class="dropdown-item" href="swt1leicht.html">Variante A</a></li>
+                  <li><a class="dropdown-item" href="swt1schwer.html">Variante B</a></li>
                 </ul>
               </li>
             </li>
@@ -65,15 +65,15 @@
                   Stellenwerttafel 2
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="swt2leicht.html">Leicht</a></li>
-                  <li><a class="dropdown-item" href="swt2schwer.html">Schwierig</a></li>
+                  <li><a class="dropdown-item" href="swt2leicht.html">Variante A</a></li>
+                  <li><a class="dropdown-item" href="swt2schwer.html">Variante B</a></li>
                 </ul>
               </li>
             </li>
           </ul>
         </div>
         <span class="navbar-text">
-          <p class="text-dark">Stellenwerttafel 2 (schwer)</p>
+          <p class="text-dark">Stellenwerttafel 2 (Variante B)</p>
         </span>
       </div>
     </nav>
