--- a/swt2leicht.html
+++ b/swt2leicht.html
@@ -41,6 +41,7 @@
   </head>
   <body>
     <!--Navbar-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <nav class="navbar navbar-expand-lg" style="background-color: #c2f8f4;">
       <div class="container-fluid">
         <a class="navbar-brand" style="font-size: 2rem;" href="#">Stellenwerttafel</a>
@@ -55,8 +56,8 @@
                   Stellenwerttafel 1
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="index.html">Leicht</a></li>
-                  <li><a class="dropdown-item" href="swt1schwer.html">Schwierig</a></li>
+                  <li><a class="dropdown-item" href="swt1leicht.html">Variante A</a></li>
+                  <li><a class="dropdown-item" href="swt1schwer.html">Variante B</a></li>
                 </ul>
               </li>
             </li>
@@ -66,23 +67,22 @@
                   Stellenwerttafel 2
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="swt2leicht.html">Leicht</a></li>
-                  <li><a class="dropdown-item" href="swt2schwer.html">Schwierig</a></li>
+                  <li><a class="dropdown-item" href="swt2leicht.html">Variante A</a></li>
+                  <li><a class="dropdown-item" href="swt2schwer.html">Variante B</a></li>
                 </ul>
               </li>
             </li>
           </ul>
         </div>
         <span class="navbar-text">
-          <p class="text-dark">Stellenwerttafel 2 (leicht)</p>
+          <p class="text-dark">Stellenwerttafel 2 (Variante A)</p>
         </span>
       </div>
     </nav>
-    <div class="container text-center">
+    <h2 id="exercise"></h2>
       <div class="container text-center">
         <div class="row" id="count-row">
           <div class="container-fluid">
-            <h2 id="exercise"></h2>
             <table class="table table-bordered">
               <thead>
                 <tr>
@@ -101,7 +101,6 @@
           </div>
         </div>
       </div>
-    </div>
     <div class="container text-center">
       <button
         id="submitBtn"
